--- a/components/AccountCreator/AccountCreator.module.scss
+++ b/components/AccountCreator/AccountCreator.module.scss
@@ -23,7 +23,7 @@
 }
 
 .minifiedTitle {
-  font-size: 1.5rem;
+  font-size: 3rem;
 }
 
 .actions {
@@ -80,7 +80,7 @@
 }
 
 .wrapper {
-  border: 2px solid var(--neutral-text);
+  //border: 2px solid var(--neutral-text);
   background: var(--neutral-card);
   padding: 1.2rem;
   border-radius: 0.625rem;
