--- a/ui-kit/Accordion/Accordion.module.scss
+++ b/ui-kit/Accordion/Accordion.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   border-radius: 0.625rem;
   justify-content: space-between;
-  border: 2px solid var(--neutral-text);
+  //border: 2px solid var(--neutral-text);
   background: var(--neutral-card);
   overflow: hidden;
   transition: all 0.3s linear;
