--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,7 +1,7 @@
+@import "./mixins";
 .logo {
   user-select: none;
   pointer-events: none;
-  padding-top: 2.8rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,6 +10,9 @@
   font-size: 2.5rem;
   margin-bottom: 5px;
   max-width: max-content;
+  @include for-desktop {
+    padding-top: 2.8rem;
+  }
 
   .stars {
     letter-spacing: 2px;
@@ -35,4 +38,10 @@
   margin-top: 20px;
   display: flex;
   gap: 10px;
+
+  .button {
+    @include for-mobile {
+      font-size: 1.2rem;
+    }
+  }
 }
