--- a/components/HeaderBlock/HeaderBlock.module.scss
+++ b/components/HeaderBlock/HeaderBlock.module.scss
@@ -17,7 +17,7 @@
   height: 10rem;
   display: flex;
   padding: 1.2rem;
-  border: 2px solid var(--neutral-text);
+  //border: 2px solid var(--neutral-text);
   flex-direction: column;
   border-radius: 0.625rem;
   justify-content: space-between;
@@ -59,7 +59,7 @@
   gap: 0.5rem;
   flex-direction: row;
   padding: 1.2rem;
-  border: 2px solid var(--neutral-text);
+  //border: 2px solid var(--neutral-text);
   border-radius: 0.625rem;
   background: var(--neutral-card);
 
