--- a/components/ProfileMenu/ProfileMenu.module.scss
+++ b/components/ProfileMenu/ProfileMenu.module.scss
@@ -11,13 +11,14 @@
 .menu {
   display: flex;
   flex-direction: column;
-  border: 2px solid var(--neutral-input);
+  //border: 2px solid var(--neutral-input);
   width: 26.5%;
   border-radius: 0.625rem;
   overflow: hidden;
   height: max-content;
   max-height: 23.5rem;
   transition: max-height 0.2s linear;
+  background: var(--neutral-card);
   @include for-mobile {
     width: 100%;
   }
@@ -39,10 +40,11 @@
 
 .component {
   flex: 1;
-  border: 2px solid var(--neutral-input);
+  //border: 2px solid var(--neutral-input);
   border-radius: 0.625rem;
   padding: 1.2rem;
   margin-bottom: 2rem;
+  background: var(--neutral-card);
   @include for-mobile{
     padding: 1rem;
   }
@@ -65,6 +67,6 @@
 
 .hideMenu {
   @include for-mobile {
-    max-height: 3.6rem;
+    max-height: 3.5rem;
   }
 }
