--- a/ui-kit/Accordion/Accordion.module.scss
+++ b/ui-kit/Accordion/Accordion.module.scss
@@ -12,28 +12,45 @@
   margin-bottom: 1rem;
 }
 
+.titleWrapper{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  padding: 1.2rem;
+
+}
+
 .title {
   font-size: 1.8rem;
   color: var(--neutral-input);
-  padding: 1.2rem;
-  cursor: pointer;
   display: flex;
   align-items: center;
+  flex: 1;
+  justify-content: space-between;
   @include for-mobile {
     font-size: 1.6rem;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
 
 .additionalInfo {
-  margin-left: auto;
+  margin-left: 1rem;
   font-size: 1.3rem;
   @include for-mobile {
     font-size: 1.2rem;
+    margin-left: 0;
   }
 }
 
 .icon {
+  color: var(--neutral-input);
   margin-left: 1rem;
+  padding-top: 0.2rem;
+  >svg{
+    transform: scale(1.4);
+  }
 }
 
 .renderContent {
