--- a/ui-kit/DragDrop/DragDrop.module.scss
+++ b/ui-kit/DragDrop/DragDrop.module.scss
@@ -34,6 +34,7 @@
   align-items: center;
   gap: 0.5rem;
   border-radius: 0.625rem;
+  position: relative;
   & > * {
     pointer-events: none;
   }
@@ -71,8 +72,7 @@
   flex-direction: column;
   justify-content: flex-end;
   border-radius: 0 0 0.625rem 0.625rem;
-  opacity: 0.6;
-  transition: opacity 0.2s;
+
 
   &:hover {
     opacity: 1;
@@ -88,10 +88,19 @@
   justify-content: center;
   background: #fff;
   border-radius: 50%;
+  opacity: 0.6;
+  transition: opacity 0.2s;
   & > svg {
     width: 20px;
     height: 20px;
     color: var(--primary-default);
+  }
+  &:hover {
+    opacity: 1;
+  }
+  &:disabled{
+    opacity: 0.6;
+    filter: grayscale(1);
   }
 }
 
@@ -103,4 +112,29 @@
   & > svg {
     color: var(--primary-default);
   }
+}
+
+.uploadInfo{
+  position: absolute;
+  bottom: 0;
+  font-size: 0.7rem;
+  font-weight: 500;
+  color: var(--neutral-grey);
+}
+
+.loadingStatus{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  color: var(--bg-color);
+  font-weight: 600;
+  background: #ffffff96;
+  border-radius: 0.625rem
 }
