--- a/app/theme/light.css
+++ b/app/theme/light.css
@@ -4,9 +4,9 @@
   --neutral-text: #545974;
   --neutral-grey: #bababa;
   --neutral-input: #545974;
-  --neutral-card:#F1F1F1;
+  --neutral-card: #f1f1f1;
 
-  --navmenu-bg: #F1F1F1;
+  --navmenu-bg: #f1f1f1;
   --navmenu-shadow: #fff;
 
   --green-status: #008600;
