--- a/components/AuthPage/AuthPage.module.scss
+++ b/components/AuthPage/AuthPage.module.scss
@@ -1,9 +1,9 @@
-@import "@/app/mixins";
+@import '@/app/mixins';
 .title {
   margin-top: 5%;
   color: var(--neutral-text);
   font-size: 6rem;
-  @include for-mobile{
+  @include for-mobile {
     font-size: 3.5rem;
   }
   font-weight: 700;
@@ -15,7 +15,7 @@
   font-size: 1.5rem;
   color: var(--neutral-grey);
   font-weight: 400;
-  @include for-mobile{
+  @include for-mobile {
     text-align: center;
     font-size: 1.5rem;
   }
