--- a/components/FullScreenLoading/FullScreenLoading.module.scss
+++ b/components/FullScreenLoading/FullScreenLoading.module.scss
@@ -1,5 +1,6 @@
 @import '@/app/mixins';
 .background {
+  overflow-y: hidden;
   background: var(--bg-color);
   display: flex;
   padding: 1.5rem;
@@ -7,8 +8,8 @@
   justify-content: center;
   flex-direction: column;
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   user-select: none;
