--- a/components/SecurityPage/SecurityPage.module.scss
+++ b/components/SecurityPage/SecurityPage.module.scss
@@ -16,6 +16,8 @@
   @include for-mobile {
     gap: unset;
     justify-content: space-between;
+    margin-bottom: 1.5rem;
+    margin-left: auto;
   }
 }
 
