--- a/ui-kit/Accordion/Accordion.module.scss
+++ b/ui-kit/Accordion/Accordion.module.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   background: var(--neutral-card);
   overflow: hidden;
-  transition: all 0.3s linear;
+  //transition: all 0.3s linear;
   margin-bottom: 1rem;
 }
 
