--- a/ui-kit/InfoBlock/InfoBlock.module.scss
+++ b/ui-kit/InfoBlock/InfoBlock.module.scss
@@ -20,7 +20,10 @@
 }
 
 .text{
-  height: auto;
-  display: flex;
-  align-items: center;
+  //height: auto;
+  //display: flex;
+  //align-items: center;
+  & > a{
+    color: var(--primary-default);
+  }
 }
