--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -38,10 +38,18 @@
   margin-top: 20px;
   display: flex;
   gap: 10px;
-
+  @include for-mobile{
+    width: 100%;
+    justify-content: center;
+    & > a{
+      width: 50%;
+    }
+  }
   .button {
     @include for-mobile {
       font-size: 1.2rem;
+      width: 100%;
+      max-width: unset;
     }
   }
 }
