--- a/app/theme/light.css
+++ b/app/theme/light.css
@@ -4,7 +4,7 @@
   --neutral-text: #545974;
   --neutral-grey: #bababa;
   --neutral-input: #545974;
-  --neutral-card: #f1f1f1;
+  --neutral-card: #e6e6e6;
 
   --navmenu-bg: #f1f1f1;
   --navmenu-shadow: #fff;
