--- a/providers/SnackbarProvider/Snackbar.module.scss
+++ b/providers/SnackbarProvider/Snackbar.module.scss
@@ -1,12 +1,30 @@
 @import '@/app/mixins';
 
-.snackbar {
-  display: none;
+.snackbarWrapper{
   position: fixed;
   bottom: 2rem;
   left: 2rem;
-  background: var(--primary-default);
-  color: #fff;
+  height: auto;
+  display: flex;
+  gap: 1rem;
+  flex-direction: column-reverse;
+  justify-content: center;
+  z-index: 5;
+  @include for-mobile{
+    bottom: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: max-content;
+    flex-direction: column;
+  }
+}
+
+.snackbar {
+  position: relative;
+  display: flex;
+  background: var(--neutral-card);
+  color: var(--neutral-text);
   padding: 1rem;
   width: 20rem;
   border-radius: 0.625rem;
@@ -14,6 +32,11 @@
   font-family: var(--play);
   cursor: pointer;
   overflow: hidden;
+  animation: snackBarAnimation var(--snackbar-delay) forwards linear;
+  @include for-mobile {
+    border-radius: 0;
+    animation: snackBarAnimation var(--snackbar-delay) forwards linear;
+  }
 
   &:after {
     position: absolute;
@@ -22,32 +45,27 @@
     bottom: 0;
     width: 100%;
     height: 0.3rem;
-    background: #fff;
+    background: var(--primary-default);
     animation: progressAnimation var(--snackbar-delay) forwards linear;
   }
   @include for-mobile {
-    z-index: 3;
+    z-index: 5;
     width: 100%;
     left: 0;
     bottom: 0;
+    &:not(:last-child){
+      display: none;
+    }
   }
 }
 
-.snackBarvisible {
-  display: flex;
-  animation: snackBarAnimation var(--snackbar-delay) forwards linear;
-
-  @include for-mobile {
-    animation: snackBarAnimationMobile var(--snackbar-delay) forwards linear;
-  }
-}
 
 @keyframes snackBarAnimation {
   0% {
     left: -10rem;
   }
   10% {
-    left: 2rem;
+    left: 0;
   }
   50% {
     opacity: 1;
@@ -60,16 +78,16 @@
 @keyframes snackBarAnimationMobile {
   0% {
     opacity: 1;
-    bottom: -10rem;
+    left: -10rem;
   }
   20% {
-    bottom: 1rem;
+    left: 1rem;
   }
   80% {
-    bottom: 1rem;
+    left: 1rem;
   }
   100% {
-    bottom: -10rem;
+    left: -10rem;
   }
 }
 
