--- a/components/AccountCreator/AccountCreator.module.scss
+++ b/components/AccountCreator/AccountCreator.module.scss
@@ -34,6 +34,10 @@
     display: flex;
     justify-content: space-between;
     padding-bottom: 1.2rem;
+    > button {
+      font-size: 1rem;
+      padding: 0.5rem;
+    }
   }
 }
 
