Форма обратной связи

--- a/components/SecurityPage/SecurityPage.module.scss
+++ b/components/SecurityPage/SecurityPage.module.scss
@@ -29,6 +29,9 @@
   color: var(--neutral-text);
   font-size: 2rem;
   margin-bottom: 1rem;
+  @include for-mobile{
+    font-size: 1.5rem;
+  }
 }
 
 .deleteForm {
