--- a/providers/SnackbarProvider/Snackbar.module.scss
+++ b/providers/SnackbarProvider/Snackbar.module.scss
@@ -25,8 +25,9 @@
   display: flex;
   background: var(--neutral-card);
   color: var(--neutral-text);
-  padding: 1rem;
-  width: 20rem;
+  padding: 1rem 2.5rem 1rem 1rem;
+  min-width: 20rem;
+  width: max-content;
   border-radius: 0.625rem;
   font-weight: 700;
   font-family: var(--play);
@@ -42,10 +43,6 @@
     top: 0.5rem;
   }
 
-  @include for-mobile {
-    border-radius: 0;
-    animation: snackBarAnimation var(--snackbar-delay) forwards linear;
-  }
   &:after {
     position: absolute;
     content: '';
@@ -57,6 +54,8 @@
     animation: progressAnimation var(--snackbar-delay) forwards linear;
   }
   @include for-mobile {
+    border-radius: 0;
+    animation: snackBarAnimation var(--snackbar-delay) forwards linear;
     z-index: 5;
     width: 100%;
     left: 0;
