--- a/ui-kit/DragDrop/DragDrop.module.scss
+++ b/ui-kit/DragDrop/DragDrop.module.scss
@@ -50,7 +50,6 @@
   font-weight: 600;
 }
 
-
 .previewWrapper {
   position: relative;
   width: 11rem;
@@ -74,7 +73,6 @@
   flex-direction: column;
   justify-content: flex-end;
   border-radius: 0 0 0.625rem 0.625rem;
-
 
   &:hover {
     opacity: 1;
@@ -100,7 +98,7 @@
   &:hover {
     opacity: 1;
   }
-  &:disabled{
+  &:disabled {
     opacity: 0.6;
     filter: grayscale(1);
   }
@@ -116,7 +114,7 @@
   }
 }
 
-.uploadInfo{
+.uploadInfo {
   position: absolute;
   bottom: 0;
   font-size: 0.7rem;
@@ -124,7 +122,8 @@
   color: var(--neutral-grey);
 }
 
-.loadingBackground, .loadingText{
+.loadingBackground,
+.loadingText {
   position: absolute;
   top: 0;
   left: 0;
@@ -140,7 +139,7 @@
   transition: all 0.2s;
 }
 
-.loadingText{
+.loadingText {
   font-weight: 600;
   font-size: 1rem;
   width: max-content;
