--- a/ui-kit/SearchBar/SearchBar.module.scss
+++ b/ui-kit/SearchBar/SearchBar.module.scss
@@ -37,19 +37,18 @@
     color: #fff;
     font-size: 1rem;
   }
-
 }
-.clearIcon{
+.clearIcon {
   height: 1.3rem;
   padding-right: 1rem;
   cursor: pointer;
-  > svg{
+  > svg {
     width: 1.3rem;
     height: 1.3rem;
-    color: #BABABA;
+    color: #bababa;
   }
 }
 
-.hideClearIcon{
+.hideClearIcon {
   display: none;
 }
