--- a/providers/ModalProvider/ModalProvider.module.scss
+++ b/providers/ModalProvider/ModalProvider.module.scss
@@ -1,7 +1,7 @@
 @import "app/mixins";
 .wrapper{
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: #0000004d;
   position: fixed;
   overflow: hidden;
