--- a/providers/ModalProvider/ModalProvider.module.scss
+++ b/providers/ModalProvider/ModalProvider.module.scss
@@ -25,7 +25,9 @@
   box-shadow: 0 0 30px 0 rgba(0,0,0,0.75);
   position: relative;
   animation: modalAnimation 0.2s linear;
-  overflow: auto;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 
   @include for-mobile{
     width: 100%;
@@ -37,6 +39,7 @@
 .childrenWrapper{
   padding: 0 1.5rem 1.5rem;
   @include for-mobile{
+    overflow: auto;
     padding-top: 0;
   }
 }
@@ -128,5 +131,11 @@
   }
   100% {
       transform: translateY(0);
+  }
+}
+
+.hideScroll{
+  @include for-mobile{
+    overflow: hidden;
   }
 }
