--- a/providers/ModalProvider/ModalProvider.module.scss
+++ b/providers/ModalProvider/ModalProvider.module.scss
@@ -129,8 +129,10 @@
 @keyframes closeMobileModalAnimation {
   0% {
     transform: translateY(0%);
+    opacity: 1;
   }
   100% {
+    opacity: 0;
     transform: translateY(100%);
   }
 }
@@ -148,10 +150,12 @@
 
 @keyframes mobileModalAnimation {
   0% {
+    opacity: 0;
     transform: translateY(100%);
   }
   100% {
-      transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
