--- a/components/ThemeSwitcher/ThemeSwitcher.module.scss
+++ b/components/ThemeSwitcher/ThemeSwitcher.module.scss
@@ -5,10 +5,30 @@
   border-radius: 0.625rem;
   cursor: pointer;
   width: 7rem;
-  position: relative;
   height: 2.125rem;
   overflow: hidden;
   background: var(--bg-color);
+  position: relative;
+}
+
+.button {
+
+  &:before {
+    position: absolute;
+    left: 0;
+    content: '';
+    top: 0;
+    width: 50%;
+    height: 100%;
+    background: var(--primary-default);
+    transition: transform 0.2s linear;
+  }
+
+  &.darkActive {
+    &:before {
+      transform: translateX(100%);
+    }
+  }
 }
 
 .icon {
@@ -19,57 +39,11 @@
   justify-content: center;
   color: var(--neutral-text);
 
-  &:before {
-    position: absolute;
-    content: '';
-    background: var(--primary-default);
-  }
-
   svg {
     z-index: 1;
   }
 }
 
-.leftAnimation {
-  color: white;
-  &:before {
-    z-index: 0;
-    width: 50%;
-    height: 100%;
-    animation: leftAnimation 0.2s linear forwards;
-  }
-}
-
-.rightAnimation {
-  color: white;
-  &:before {
-    z-index: 0;
-    width: 50%;
-    height: 100%;
-    animation: rightAnimation 0.2s linear forwards;
-  }
-}
-
-@keyframes leftAnimation {
-  0% {
-    right: 0;
-  }
-  100% {
-    right: 50%;
-  }
-}
-
-@keyframes rightAnimation {
-  0% {
-    left: 0;
-  }
-  100% {
-    left: 50%;
-  }
-}
-
 .active {
-  background: var(--primary-default);
   color: white;
-  height: 100%;
 }
