--- a/components/AboutPage/AboutPage.module.scss
+++ b/components/AboutPage/AboutPage.module.scss
@@ -14,7 +14,6 @@
 .description {
   color: var(--neutral-text);
   font-size: 1.5rem;
-  font-style: italic;
   @include for-mobile {
     font-size: 1rem;
   }
@@ -22,7 +21,7 @@
 .contactsWrapper {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0;
 }
 
 .contacts {
