--- a/ui-kit/DragDrop/DragDrop.module.scss
+++ b/ui-kit/DragDrop/DragDrop.module.scss
@@ -55,11 +55,22 @@
   width: 11rem;
   height: 15rem;
   overflow: hidden;
+  @include for-mobile{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border: 2px solid var(--neutral-input);
+    border-radius: 0.625rem;
+  }
 
   .image {
     height: 15rem;
     width: 11rem;
-    border: 2px solid #fff;
+    border: 2px solid var(--neutral-input);
+    @include for-mobile{
+      border: none;
+      border-radius: 0;
+    }
   }
 }
 
