--- a/ui-kit/Button/Button.module.scss
+++ b/ui-kit/Button/Button.module.scss
@@ -15,7 +15,7 @@
 
 .outline {
   background: transparent;
-  color: var(--primary-default);
+  color: var(--neutral-text);
   border: 2px solid var(--primary-default);
 }
 
