--- a/components/ProfileHeader/ProfilePage.module.scss
+++ b/components/ProfileHeader/ProfilePage.module.scss
@@ -3,6 +3,12 @@
 .wrapper {
   display: flex;
   width: 100%;
+  flex-direction: column;
+
+}
+
+.profileWrapper{
+  display: flex;
   @include for-mobile {
     position: relative;
     flex-direction: column;
