--- a/ui-kit/Input/Input.module.scss
+++ b/ui-kit/Input/Input.module.scss
@@ -44,6 +44,14 @@
   }
 }
 
+.blocked{
+  //filter: grayscale(1);
+  border: 2px solid var(--neutral-grey);
+  & > .input{
+    color: var(--neutral-grey);
+  }
+}
+
 .error {
   left: 0.6rem;
   font-size: 0.8rem;
