--- a/components/ProfileMenu/ProfileMenu.module.scss
+++ b/components/ProfileMenu/ProfileMenu.module.scss
@@ -23,12 +23,37 @@
   }
 }
 
+.text{
+  position: relative;
+  z-index: 2;
+}
+
 .link {
   padding: 1.2rem;
   color: var(--neutral-text);
   font-weight: 700;
+  position: relative;
   @include for-mobile {
     padding: 1rem;
+  }
+  transition: color 0.2s linear;
+  &:hover{
+    color: #fff;
+  }
+  &:not(.active):after{
+    z-index: 1;
+    transition: transform 0.2s linear;
+    position: absolute;
+    content: '';
+    left: 0;
+    width: 80%;
+    transform: translateX(-101%);
+    top: 0;
+    height: 100%;
+    background: var(--primary-default);
+  }
+  &:hover:after{
+    transform: translateX(0);
   }
 }
 
