--- a/providers/ModalProvider/ModalProvider.module.scss
+++ b/providers/ModalProvider/ModalProvider.module.scss
@@ -132,7 +132,7 @@
   }
   100% {
     opacity: 0;
-    transform: translateY(100%);
+    transform: translate3d(0,100%,0);
   }
 }
 //Анимации открытия
@@ -150,11 +150,11 @@
 @keyframes mobileModalAnimation {
   0% {
     opacity: 0;
-    transform: translateY(100%);
+    transform: translate3d(0,100%,0);
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
+    transform: translate3d(0,0%,0);
   }
 }
 
