--- a/providers/ModalProvider/ModalProvider.module.scss
+++ b/providers/ModalProvider/ModalProvider.module.scss
@@ -29,6 +29,10 @@
   display: flex;
   flex-direction: column;
   will-change: auto;
+  transition: transform 0.15s linear;
+  &.stopTransition{
+    transition: none;
+  }
 
   @include for-mobile{
     width: 100%;
