--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -32,6 +32,13 @@
 .main {
   background: var(--bg-color);
   margin-top: 11%;
+  @include for-mobile{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+  }
 }
 
 .navigation {
