--- a/components/NavMenu/NavMenu.module.scss
+++ b/components/NavMenu/NavMenu.module.scss
@@ -7,6 +7,7 @@
   height: 100%;
   border-radius: 0.625rem;
   overflow: hidden;
+  box-shadow: var(--wrapper-shadow);
   @include for-mobile {
     border: none;
     position: fixed;
