--- a/providers/ModalProvider/ModalProvider.module.scss
+++ b/providers/ModalProvider/ModalProvider.module.scss
@@ -2,7 +2,7 @@
 .wrapper{
   width: 100%;
   height: 100%;
-  background: #0000004d;
+  background: rgba(0, 0, 0, 0.4);
   position: fixed;
   overflow: hidden;
   z-index: 10;
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: center;
   font-family: var(--play);
+  backdrop-filter: blur(1px);
   @include for-mobile{
     align-items: flex-end;
     justify-content: flex-end;
@@ -61,14 +62,18 @@
   position: sticky;
   top: 0;
   width: 100%;
-  border-bottom: 2px solid var(--primary-default);
+  text-decoration: underline var(--primary-default);
+  text-underline-offset: 10px;
   @include for-mobile{
+    text-decoration: none;
     margin-left: 0;
     padding-left: 1.5rem;
     padding-bottom: 1rem;
     display: block;
     font-size: 1.5rem;
     text-align: center;
+    border-bottom: 2px solid var(--primary-default);
+
   }
 }
 
