--- a/components/ThemeSwitcher/ThemeSwitcher.module.scss
+++ b/components/ThemeSwitcher/ThemeSwitcher.module.scss
@@ -9,10 +9,6 @@
   overflow: hidden;
   background: var(--bg-color);
   position: relative;
-}
-
-.button {
-
   &:before {
     position: absolute;
     left: 0;
@@ -41,6 +37,12 @@
 
   svg {
     z-index: 1;
+    transition: transform 0.25s linear;
+  }
+  &:hover{
+    svg {
+      transform: rotate(90deg);
+    }
   }
 }
 
