--- a/components/LoginForm/LoginForm.module.scss
+++ b/components/LoginForm/LoginForm.module.scss
@@ -16,3 +16,11 @@
   flex-direction: column;
   gap: 1rem;
 }
+
+.recoveryLink{
+  color: var(--primary-default);
+  text-align: center;
+  &:hover{
+    color: var(--primary-default-hover);
+  }
+}
